--- a/AuthentiFi/package.json
+++ b/AuthentiFi/package.json
@@ -1,42 +1,22 @@
 {
-  "name": "authentifi",
+  "name": "the-website1",
   "version": "1.0.0",
-  "description": "product ownership management system",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1 ab le ke manega kya?",
+    "ilt": "echo itni zor se kya sun raha gaand dega kya"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kylelobo/AuthentiFi.git"
-  },
-  "keywords": [
-    "blockchain",
-    "ethereum",
-    "xdc",
-    "solidity",
-    "truffle",
-    "ganache",
-    "nodejs",
-    "android"
-  ],
+  "keywords": [],
   "author": "",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/kylelobo/AuthentiFi/issues"
-  },
-  "homepage": "https://github.com/kylelobo/AuthentiFi#readme",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.3",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "debug": "^4.1.1",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
-    "mysql": "^2.16.0",
-    "passport": "^0.4.0",
-    "redis": "^2.8.0",
-    "socket.io": "^2.2.0",
-    "web3": "^0.20.6"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "mysql": "^2.18.1",
+    "web3": "^1.10.0"
   }
 }
